--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Silly Army Game</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
